# LeRobot-SO101-VLA

./: README.md  camera_calibrate.py  pyproject.toml
calibration/: follower_111.json  leader_111.json
configs/data/: arrangements.json
configs/train/: bench.yaml  full_eval1.yaml  full_eval1_flower.yaml  full_eval1_v2.yaml  full_eval2.yaml  full_eval2_flower.yaml  full_eval3_v1.yaml  overfit.yaml  pi0_task1.yaml  pi0_task2.yaml
docs/: data_collection_protocol.md  decisions.md  flowervla_spike.md  inference_flower_setup.md
reports/: eval1_step2000.json
scripts/: aggregate_bench.py  bench_array.slurm  bench_compile.slurm  benchmark_batch.py  cast_checkpoint_bf16.py  eval_offline.py  eval_offline.slurm  merge_datasets.py  overfit_test.py  probe_testing.py  repair_checkpoint_processors.py  run_inference.py  run_inference_real.py  run_inference_real_flower.py  teleop_record.sh  teleop_validate.py  train.py  train.slurm
scripts/spikes/: flower.py  probe_phase_detector.py
src/data/: prompt_aug.py  splits.py
src/models/: decoupled_policy.py  smolvla_wrapper.py
test_data/data/chunk-000/: file-000.parquet
test_data/meta/: info.json  stats.json  tasks.parquet
test_data/meta/episodes/chunk-000/: file-000.parquet
tests/: test_prompt_aug.py  test_rollout_logger.py  test_splits.py
